# AI-monero-miner

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.cmd  install.bat  install.ps1  install.sh
.github/workflows/: build-randomx.yml
cmake/: FindPrecompiledRandomX.cmake  flags.cmake
config/: default_config.json
doc/: ALGORITHMS.md  BENCHMARK.md  CHANGELOG_OLD.md  CPU_MAX_USAGE.md
scripts/: download-randomx.ps1  download-randomx.sh
src/: Summary.cpp  main.cpp
src/ai/: AIOptimizer.cpp  AIOptimizer.h  NeuralNetwork.cpp  NeuralNetwork.h  neural_net.cpp  neural_net.h  optimizer.cpp  optimizer.h  system_monitor.cpp  system_monitor.h
src/backend/cpu/: CpuWorker.cpp
src/backend/cpu/platform/: BasicCpuInfo_riscv.cpp  lscpu_riscv.cpp
src/backend/opencl/cl/rx/: randomx_jit.cl
src/base/net/http/: HttpContext.h
src/core/: Controller.cpp  Controller.h  Miner.cpp  Miner.h  miner.cpp  miner.h  worker.cpp  worker.h
src/core/config/: ConfigTransform.cpp  Config_default.h
src/crypto/: randomx_handler.cpp  randomx_handler.h
src/crypto/cn/: sse2rvv.h  sse2rvv_optimized.h  sse2rvv_scalar_backup.h
src/crypto/cn/asm/: CryptonightR_template.inc  CryptonightR_template_win.inc
src/crypto/cn/asm/cn2/: cnv2_double_main_loop_sandybridge.inc  cnv2_rwz_double_main_loop.inc
src/crypto/cn/asm/win64/: CryptonightR_template_win.inc
src/crypto/cn/asm/win64/cn2/: cnv2_double_main_loop_sandybridge.inc  cnv2_rwz_double_main_loop.inc
src/crypto/cn/r/: variant4_random_math.h
src/crypto/randomx/: jit_compiler_a64_static.S  jit_compiler_rv64_vector.cpp  jit_compiler_x86.cpp  vm_interpreted.cpp  vm_interpreted_light.cpp
src/crypto/randomx/asm/: program_read_dataset.inc
src/crypto/randomx/blake2/: blake2b.c
src/network/: job.h  stratum_client.cpp  stratum_client.h
src/utils/: config.cpp  config.h  logger.cpp  logger.h
